@@ -1,6 +1,13 @@
 AC_INIT(ser2net.c)
 AM_INIT_AUTOMAKE(ser2net, 1.5)
 AM_PROG_LIBTOOL
+AC_ARG_WITH(uucp-locking,
+ [  --with-uucp-locking     Enable UUCP-style locking],
+ uucp_locking_flag="$withval",
+ uucp_locking_flag=yes)
+if test "$uucp_locking_flag" = yes; then
+  AC_DEFINE(USE_UUCP_LOCKING)
+fi
 AC_PROG_CC
 AC_STDC_HEADERS
 AC_HAVE_HEADERS(tcpd.h)
