@@ -1,4 +1,10 @@
 
+2002-02-19  Przemyslaw Czerpak (druzus@polbox.com),
+	Corey Minyard <minyard@acm.org>
+
+	* dataxfer.c, dataxfer.h, configure.in, ser2net.c:
+	Added UUCP-style locking for ports.
+	
 2002-02-19  Corey Minyard <minyard@acm.org>
 
 	* controller.c, controller.h, dataxfer.c, devcfg.c, ser2net.c,
